# amptudix-native-rag-pipeline

./: .gitignore  main.py  pyproject.toml  test.py  test1.py  ui.py
app/: main.py  query.py
app/agents/: llm.py
app/api/: chat.py  upload.py
app/core/: chat.py  config.py  database.py  file_engine.py  pdf_engine.py
app/schemas/: chat.py  file.py
app/scripts/: ingest_data.py
